@@ -33,8 +33,9 @@ Designer 2.14.0 (2013-XX-XX Markab)
  Internal:
 
   - Image Asset Picker converted to GXT3 (Eric Bariaux, MODELER-330)
-  - Hibernate lazy initialization errors on device attributes
-    (Eric Bariaux, MODELER-389)
+  - Hibernate lazy initialization errors on device attributes, 
+    correct handling of sensor ID assignments in transactions
+    (Eric Bariaux, MODELER-389, MODELER-396)
   
 
 Designer 2.13.9 (2013-03-30 Rosemary)
